<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/avatar_3d"/>

        <ImageView
            android:id="@+id/edit_profile_picture_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:src="@drawable/add_a_photo_24px"
            app:layout_constraintBottom_toBottomOf="@id/profile_picture"
            app:layout_constraintEnd_toEndOf="@id/profile_picture"
            app:tint="@color/black"
            android:importantForAccessibility="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="text"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="TextFields"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <DatePicker
        android:id="@+id/date_picker_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/usaf_academy_blue"
            android:text="@string/male"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/usaf_academy_blue"
            android:text="@string/female"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/radio_button_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/usaf_academy_blue"
            android:checked="true"
            android:text="@string/other"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/main_blue"/>

</androidx.appcompat.widget.LinearLayoutCompat>