<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VerifyActivity"
    android:gravity="center">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_mail_200"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textAlignment="center"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="30dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code"
        android:inputType="numberSigned"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/btn_enter_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="20sp"
        android:typeface="normal"
        android:textColor="@color/white"
        android:padding="10dp"
        android:backgroundTint="@color/main_blue"/>
    <TextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textSize="20sp"
        android:textColor="@color/main_blue"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:backgroundTint="@color/black"/>
</androidx.appcompat.widget.LinearLayoutCompat>