<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VerifyActivity"
    android:gravity="center">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_phone_100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginVertical="30dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"/>
    <ProgressBar
        android:id="@+id/verify_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_next_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:typeface="normal"
        android:textColor="@color/white"
        android:padding="10dp"
        android:backgroundTint="@color/main_blue"/>
</androidx.appcompat.widget.LinearLayoutCompat>